[package]
name = "rarc_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.10.0"
bitflags = "1.3.2"
yaz0rust = { git = "https://github.com/Lord-Giganticus/Yaz0-Rust", version = "1.0.0" }
