[package]
name = "rarc_tool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
binrw = "0.11.2"
bitflags = "2.3.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
yaz0 = "0.3.0"
